--- a/helloVue/src/04计算属性/04computed和methods的对比.html
+++ b/helloVue/src/04计算属性/04computed和methods的对比.html
@@ -21,7 +21,7 @@
         var app = new Vue({
             el: '#app',
             data: {
-                firstName: '小明',
+                firstName: '小明2',
                 lastName: '张'
             },
             methods: {
