--- a/helloVue/src/04计算属性/02计算属性复杂使用.html
+++ b/helloVue/src/04计算属性/02计算属性复杂使用.html
@@ -11,7 +11,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script type="text/javascript">
-        var app = new Vue({
+        let app = new Vue({
             el: '#app',
             data: {
                 books: [
